--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -62,6 +62,7 @@
     <string name="folder_exist">文件夾 %1$s 已存在，請重新命名</string>
     <string name="menu_share">分享</string>
     <string name="menu_image_share">图片分享</string>
+    <string name="menu_image_insert">图片插入</string>
     <string name="menu_send_to_desktop">發送到桌面</string>
     <string name="menu_alert">提醒我</string>
     <string name="menu_remove_remind">刪除提醒</string>
