--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,6 +65,7 @@
     <string name="folder_exist">The folder %1$s exist, please rename</string>
     <string name="menu_share">Share</string>
     <string name="menu_image_share">Image Share</string>
+    <string name="menu_image_insert">Image Insert</string>
     <string name="menu_send_to_desktop">Send to home</string>
     <string name="menu_alert">Remind me</string>
     <string name="menu_remove_remind">Delete reminder</string>
