--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -67,6 +67,8 @@
     <string name="menu_send_to_desktop">發送到桌面</string>
     <string name="menu_alert">提醒我</string>
     <string name="menu_remove_remind">刪除提醒</string>
+    <string name="menu_font">字體</string>
+    <string name="menu_speech_input">語音輸入</string>
     <string name="menu_title_select_folder">選擇文件夾</string>
     <string name="menu_move_parent_folder">上一級文件夾</string>
     <string name="info_note_enter_desktop">已添加到桌面</string>
